Ollivanders2API improvements: * changed all classes to use common, playerCommon, and entityCommon through Ollivanders2API rather than directly so those are now singletons - so we do not do things like have multiple classes setting the game-level seed * added requiredEnabled so that if the plugin is disabled, other plugins using the API will get an error if they try to access API functions * added shutdown cleanup of resources